--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Azalan Kamayan Restaurant,  restaurant in Pueblo de Panay, best restaurant in Pueblo de Panay, Filipino cuisine in Pueblo de Panay, traditional Filipino dining, restaurants in roxas city, Azalan restaurant Roxas City, Filipino buffet, authentic Filipino food, restaurant in Pueblo de Panay, best Filipino restaurant, Kamayan style dining, family restaurant Pueblo de Panay, best seafood in Pueblo de Panay, Filipino food near me, Azalan Kamayan buffet">
     <meta name="author" content="Your Name">
     <title>Azalan Kamayan Restaurant</title>
-    <link rel="stylesheet" href="featured-dishes.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="rrabout.css">
     <link rel="stylesheet" href="testimony.css">
     <!-- Favicon -->
