--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Your Name">
     <title>Azalan Kamayan Restaurant</title>
     <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="featured-dishes.css">
     <link rel="stylesheet" href="rrabout.css">
     <link rel="stylesheet" href="testimony.css">
     <!-- Favicon -->
