--- a/index.html
+++ b/index.html
@@ -236,7 +236,8 @@ transition: margin-left 0.5s ease; /* Smooth transition for margin-left */
 .view-menu-btn {
     background-color: orange; /* Orange background */
     color: white;
-    padding: 10px 10px;
+   border-radius: 20px;
+    padding: 10px 20px;
     font-size: 1rem;
     border: none; /* Remove border */
     cursor: pointer; /* Add cursor pointer to indicate it's clickable */
