--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@ transition: margin-left 0.5s ease; /* Smooth transition for margin-left */
                 </li>
                 
 <!-- View Menu Button -->
-<button class="view-menu-btn" onclick="window.location.href='#menu'">View Menu</button>
+<button class="view-menu-btn" onclick="window.location.href='#menu'">Contact Us</button>
                 
             </ul>
         </div>
